crates/stackable-versioned-macros/tests/comp_inputs/default/fail/deprecate.stderr
error: deprecation must be done using `#[versioned(deprecated(since = "VERSION"))]`
  --> tests/comp_inputs/default/fail/deprecate.rs:10:9
   |
10 |         #[deprecated]
   |         ^
